<resources>
    <string name="app_name">工程模板</string>

    <string name="item_home">Home</string>
    <string name="item_location">Location</string>
    <string name="item_like">Like</string>
    <string name="item_person">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">开始</string>
    <string name="dialog_fragment">DialogFragment弹窗</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>
    <string name="test1">测试1</string>
    <string name="test2">测试2</string>
    <string name="test_hint">参考代码写法，有些代码没有输出结果。</string>
    <string name="title_news">新闻</string>
    <string name="title_other">其他</string>
    <string name="title_photo">图片</string>
    <string name="title_video">视频</string>
    <string name="title_media">头条号</string>

    <!--Main Activity-->
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>
    <string name="action_search">搜索</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="network_error">网络错误</string>
    <string name="title_comment">评论</string>
    <string name="share_to">分享</string>
    <string name="copied_to_clipboard">复杂成功</string>
    <string name="share_content">分享内容</string>
    <string name="copy_content">复制内容</string>
    <string name="no_more_content">暂无更多内容</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="tip_drag">长按编辑，拖拽排序</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="other_channel">隐藏频道</string>
    <string name="title_item_drag">拖拽排序</string>
    <string name="verificate_code">验证码</string>

    <!--FingerPrint start-->

    <string name="fingerprint_description">Confirm your fingerprint.</string>
    <string name="fingerprint_hint">Touch sensor</string>

    <!-- Button text -->
    <string name="start_btn">Start</string>
    <string name="cancel_btn">Cancel</string>

    <string name="fingerprint_success">Fingerprint recognized.</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again.</string>

    <!-- Dialog info -->
    <string name="no_sensor_dialog_title">No fingerprint sensor</string>
    <string name="no_sensor_dialog_message">No fingerprint sensor on your device, click cancel to exit.</string>
    <string name="no_fingerprint_enrolled_dialog_title">No fingerprint enrolled</string>
    <string name="no_fingerprint_enrolled_dialog_message">No fingerprint enrolled, enter\n
        <font fgcolor="green">Setting->Security->Nexus Imprint\n</font>
        to enrollor click cancel to exit.</string>
    <string name="ok_btn_dialog">OK</string>
    <string name="cancel_btn_dialog">Cancel</string>

    <!-- auth result error amd help code warning -->
    <string name="AcquiredGood_warning">The image acquired was good.</string>
    <string name="AcquiredImageDirty_warning">The fingerprint image was too noisy due to suspected or detected dirt on the sensor.
        For example, it\'s reasonable to return this after multiple AcquiredInsufficient or
        actual detection of dirt on the sensor (stuck pixels, swaths, etc.).
        The user is expected to take action to clean the sensor when this is returned.</string>
    <string name="AcquiredInsufficient_warning">The fingerprint image was too noisy to process due to
        a detected condition (i.e. dry skin) or a possibly dirty sensor.</string>
    <string name="AcquiredPartial_warning">Only a partial fingerprint image was detected.
        During enrollment, the user should be informed on what needs to happen to resolve this problem, e.g., "press firmly on sensor."</string>
    <string name="AcquiredTooFast_warning">The fingerprint image was incomplete due to quick motion.
        While mostly appropriate for linear array sensors, this could also happen if the finger was moved during acquisition.
        The user should be asked to move the finger slower (linear) or leave the finger on the sensor longer.</string>
    <string name="AcquiredToSlow_warning">The fingerprint image was unreadable due to lack of motion.
        This is most appropriate for linear array sensors that require a swipe motion.</string>
    <string name="ErrorCanceled_warning">The operation was canceled because the fingerprint sensor is unavailable.
        For example, this may happen when the user is switched,
        the device is locked, or another pending operation prevents or disables it.</string>
    <string name="ErrorHwUnavailable_warning">The hardware is unavailable. Try again later.</string>
    <string name="ErrorLockout_warning">The operation was canceled because the API is locked out due to too many attempts.</string>
    <string name="ErrorNoSpace_warning">Error state returned for operations like enrollment;
        the operation cannot be completed because there\'s not enough storage remaining to complete the operation.</string>
    <string name="ErrorTimeout_warning">Error state returned when the current request has been running too long.
        This is intended to prevent programs from waiting for the fingerprint sensor indefinitely.
        The timeout is platform and sensor-specific, but is generally about 30 seconds.</string>
    <string name="ErrorUnableToProcess_warning">Error state returned when the sensor was unable to process the current image.</string>
    <!--FingerPrint end-->

</resources>
