<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:enabled="true"
        android:icon="@drawable/radiobutton_bg_home"
        android:title="@string/item_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_location"
        android:enabled="true"
        android:icon="@drawable/radiobutton_bg_location"
        android:title="@string/item_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_like"
        android:enabled="true"
        android:icon="@drawable/radiobutton_bg_like"
        android:title="@string/item_like"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_me"
        android:enabled="true"
        android:icon="@drawable/radiobutton_bg_me"
        android:title="@string/item_person"
        app:showAsAction="ifRoom" />
</menu>